fixes the footer overlapping modal windows

--- a/wp-content/themes/classy/sass/_layout.scss
+++ b/wp-content/themes/classy/sass/_layout.scss
@@ -264,7 +264,7 @@ header.header {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 5;
+    z-index: 20;
     //overflow: hidden;
     //padding: 20px;
     max-height: 68px;
